--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,19 +9,17 @@
 - name: Role foolean/xserver
   block:
 
-    - name: Ensure xorg-11-server-common is not installed (CIS)
+    - name: Set OS variables
+      ansible.builtin.include_vars:
+        file: "{{ item }}"
+      with_first_found:
+        - "{{ ansible_os_family|lower }}.yml"
+        - "default.yml"
+
+    - name: CIS | Ensure X Window System is not installed
       become: true
       ansible.builtin.package:
-        name:
-          - 'xorg-x11-server-Xdmx'
-          - 'xorg-x11-server-Xephyr'
-          - 'xorg-x11-server-Xnest'
-          - 'xorg-x11-server-Xorg'
-          - 'xorg-x11-server-Xspice'
-          - 'xorg-x11-server-Xvfb'
-          - 'xorg-x11-server-common'
-          - 'xorg-x11-server-devel'
-          - 'xorg-x11-server-source'
+        name: "{{ xserver_packages }}"
         state: absent
 
   # Tags to be applied to this role (block)
